<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/directory_select_pathview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/dialog_edittext_hint"
        android:textColor="@color/MaterialLightBlue700"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/directory_choose"
        android:textColor="@color/MaterialLightBlue700"
        app:strokeColor="@color/MaterialLightBlue700"
        app:strokeWidth="2dp" />

    <ListView
        android:id="@+id/directory_select_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>