<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/activity_main_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Background -->
        <include
            layout="@layout/activity_main_center"
            android:id="@+id/activity_main_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <!-- Foreground -->
        <include layout="@layout/backdrop_foreground" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>

